LoginPage Function Done
LoginPage Function Done
-email and username in local var

--- a/356F/app/src/main/res/values/strings.xml
+++ b/356F/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
         completions."
     </string>
     <string name="title_activity_login_page">Sign in</string>
+    <string name="title_activity_main_page">MainPage</string>
 </resources>
